--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       <meta http-equiv="Cache-Control" content="no-cache">
       <meta http-equiv="Expires" content="-1">
       <title>최기순❤️최예림</title>
-      <meta property="og:image" content="https://kisoon-yelim.github.io/ksyl.github.io/photo/Main.jpg">
-      <meta property="og:url" content="https://kisoon-yelim.github.io/ksyl.github.io/">
+      <meta property="og:image" content="https://kisoon-yelim.github.io/photo/Main.jpg">
+      <meta property="og:url" content="https://kisoon-yelim.github.io/">
       <meta property="og:description" content="5월 13일 오후5시 세인트존스호텔">
       <meta property="og:title" content="최기순❤️최예림 결혼식에 초대합니다.">
       <meta property="og:type" content="website">
