--- a/index.html
+++ b/index.html
@@ -293,12 +293,12 @@ function showSlides(n) {
  <!-- 카카오내비 -->	
 <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>			
 <script type="text/javascript">
-  Kakao.init('a1065c1dcc6c5f9c31db033eb0ba55c4'); 
+  Kakao.init('9cf6bc79392dc1b5e6ac1e51d26e64f1'); 
   function startNavigation(){
    Kakao.Navi.start({
-      name: "세빛섬 주차장",
-      x: 126.9960627,
-      y: 37.5098918,
+      name: "세인트존스호텔",
+      x: 28.9209403,
+      y: 37.7912297,
       coordType:'wgs84'	   
     });
   }	
