--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
    <div id="mapcanvas" style="width:100%;height:400px;"></div> 
 	
         <p>카카오내비 &nbsp; <a id="start-navigation" href="javascript:startNavigation()">
-		<img class="kakaonavi" src="resources/kakaonavi.png" align="middle"></a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<img class="kakaonavi" src="resources/kakaonavi.png" align="middle"></a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	   티맵 &nbsp; <a class="flex-1" href="tmap://search?name=세인트존스호텔"> 
 		<img class="tmap" src="resources/tmap.png" align="middle"></a>
 	   </p>
