--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 	 
       <!-- gallery -->
 <p class="sub-Title"><br>앨범이름은 뭘루 할까요?</p><br>	  
-  <div class="wiper-container">
+  <div class="swiper-container">
   <div class="swiper-wrapper">
   <div class="swiper-slide">
     <img src="photo/1.jpg" style="width:100%">
