--- a/index.html
+++ b/index.html
@@ -240,7 +240,23 @@
    
  <!------------ 스크립트 영역 ------------ 	  
  <!-- 갤러리 -->		     
- <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> 
+ <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+  <script>
+	var swiper = new Swiper(".mySwiper", {
+        spaceBetween: 30,    // 슬라이드 사이 여백
+
+        slidesPerView : 'auto', // 한 슬라이드에 보여줄 갯수
+        centeredSlides: true,    //센터모드
+        autoplay: {     //자동슬라이드 (false-비활성화)
+	freeMode : false, // 슬라이드 넘길 때 위치 고정 여부
+		
+	  
+	  </script>  
+	  
+	  
+	  
+	  
+	  
  <!-- 갤러리 -->
 	
 	
