--- a/index.html
+++ b/index.html
@@ -244,11 +244,9 @@
   <script>
 	var swiper = new Swiper(".mySwiper", {
         spaceBetween: 30,    // 슬라이드 사이 여백
-
-        slidesPerView : 'auto', // 한 슬라이드에 보여줄 갯수
+        slidesPerView : '1', // 한 슬라이드에 보여줄 갯수
         centeredSlides: true,    //센터모드
-        autoplay: {     //자동슬라이드 (false-비활성화)
-	freeMode : false, // 슬라이드 넘길 때 위치 고정 여부
+	freeMode : true, // 슬라이드 넘길 때 위치 고정 여부
 		
 	  
 	  </script>  
