--- a/index.html
+++ b/index.html
@@ -242,12 +242,11 @@
  <!-- 갤러리 -->		     
  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script>
-	var swiper = new Swiper(".mySwiper", {
+	var swiper = new Swiper('.swiper-container', {
         spaceBetween: 30,    // 슬라이드 사이 여백
-        slidesPerView : '1', // 한 슬라이드에 보여줄 갯수
         centeredSlides: true,    //센터모드
 	freeMode : true, // 슬라이드 넘길 때 위치 고정 여부
-		
+	}	
 	  
 	  </script>  
 	  
