--- a/index.html
+++ b/index.html
@@ -242,11 +242,14 @@
  <!-- 갤러리 -->		     
  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script>
-	var swiper = new Swiper('.swiper-container', {
-        spaceBetween: 30,    // 슬라이드 사이 여백
-        centeredSlides: true,    //센터모드
-	freeMode : true, // 슬라이드 넘길 때 위치 고정 여부
-	}	
+        const swiper = new Swiper('.swiper-container', {
+                centeredSlides: false,
+                boolean: {
+                },
+                slidesPerView: 1, 
+                spaceBetween: 2,
+                freeMode : false,
+            })	
 	  
 	  </script>  
 	  
