--- a/index.html
+++ b/index.html
@@ -220,17 +220,17 @@
    <br>
  <p class="sub-Title"><br><br>마음 전하실 곳</p><br>	      
     <div class="pay2" style="text-align:center;vertical-align:middle;max-width:100%;font-weight:500;line-height:30px;">
-     <font style="font-family:MomsLetterB;font-size:15px;">신랑측 혼주</font> &nbsp; 최종훈 <button class="buttoncopy" onclick="copy_to_clipboard('123-456-789101 기업은행');" style="font-size:12px;button-color:#F2F2F2;text-align:center;border-radius:3px;border:none;">계좌복사</button>&nbsp;
+     <font style="font-family:MomsLetterB;font-size:15px;">신랑측 혼주</font> &nbsp; 최종훈 <button class="buttoncopy" onclick="copy_to_clipboard('255-12-076352 농협은행');" style="font-size:12px;button-color:#F2F2F2;text-align:center;border-radius:3px;border:none;">계좌복사</button>&nbsp;
      &nbsp; 박성희 <button class="buttoncopy" onclick="copy_to_clipboard('123-456-789101 기업은행');" style="font-size:12px;button-color:#F2F2F2;text-align:center;border-radius:3px;border:none;">계좌복사</button><br>
-     <font style="font-family:MomsLetterB;font-size:15px;">신부측 혼주</font> &nbsp; 최민수 <button class="buttoncopy" onclick="copy_to_clipboard('123-456-789101 기업은행');" style="font-size:12px;button-color:#F2F2F2;text-align:center;border-radius:3px;border:none;">계좌복사</button>&nbsp;
+     <font style="font-family:MomsLetterB;font-size:15px;">신부측 혼주</font> &nbsp; 최민수 <button class="buttoncopy" onclick="copy_to_clipboard('127-008703-03-012 기업은행');" style="font-size:12px;button-color:#F2F2F2;text-align:center;border-radius:3px;border:none;">계좌복사</button>&nbsp;
      &nbsp; 정복순 <button class="buttoncopy" onclick="copy_to_clipboard('123-456-789101 기업은행');" style="font-size:12px;button-color:#F2F2F2;text-align:center;border-radius:3px;border:none;">계좌복사</button><br>
      </div>
     <div class="pay">
      <font style="font-family:MomsLetterB;font-size:15px;">신랑</font> 최기순 <a href="https://qr.kakaopay.com/" target="_blank"><img class="kakopay" src="resources/kakaopay.png" align="middle"></a> 
-     <button class="buttoncopy" onclick="copy_to_clipboard('123-456-789101 기업은행');" style="font-size:12px;button-color:#F2F2F2;text-align:center;border-radius:3px;border:none;">계좌복사</button>	
+     <button class="buttoncopy" onclick="copy_to_clipboard('620-232338-064 하나은행');" style="font-size:12px;button-color:#F2F2F2;text-align:center;border-radius:3px;border:none;">계좌복사</button>	
      &nbsp;
      <font style="font-family:MomsLetterB;font-size:15px;">신부</font> 최예림 <a href="https://qr.kakaopay.com/" target="_blank"><img class="kakopay" src="resources/kakaopay.png" align="middle"></a>
-     <button class="buttoncopy" onclick="copy_to_clipboard('123-456-789101 기업은행');" style="font-size:12px;button-color:#F2F2F2;text-align:center;border-radius:3px;border:none;">계좌복사</button>     	  
+     <button class="buttoncopy" onclick="copy_to_clipboard('3333-09-2329391 카카오뱅크');" style="font-size:12px;button-color:#F2F2F2;text-align:center;border-radius:3px;border:none;">계좌복사</button>     	  
    </div>
 		<br>
 		<br>
