--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
  <!-- 갤러리 -->		     
  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script>
-        const swiper = new Swiper('.swiper-container', {
+        const swiper = new Swiper('.mySwiper', {
                 centeredSlides: false,
                 boolean: {
                 },
